--- a/enrich-phd-sup-data-conda-env.yaml
+++ b/enrich-phd-sup-data-conda-env.yaml
@@ -1,153 +1,107 @@
 name: enrich-phd-sup-data
 channels:
-  - conda-forge
   - defaults
 dependencies:
-  - asttokens=2.4.1=pyhd8ed1ab_0
+  - asttokens=2.0.5=pyhd3eb1b0_0
+  - blas=1.0=mkl
+  - bottleneck=1.3.5=py311h5bb9823_0
+  - brotli-python=1.0.9=py311hd77b12b_7
   - bzip2=1.0.8=he774522_0
-  - ca-certificates=2024.2.2=h56e8100_0
+  - ca-certificates=2023.12.12=haa95532_0
+  - catalogue=2.0.10=py311haa95532_0
   - certifi=2024.2.2=py311haa95532_0
-  - colorama=0.4.6=pyhd8ed1ab_0
-  - comm=0.2.1=pyhd8ed1ab_0
-  - debugpy=1.8.1=py311h12c1d0e_0
-  - decorator=5.1.1=pyhd8ed1ab_0
-  - exceptiongroup=1.2.0=pyhd8ed1ab_2
-  - executing=2.0.1=pyhd8ed1ab_0
-  - importlib-metadata=7.0.1=pyha770c72_0
-  - importlib_metadata=7.0.1=hd8ed1ab_0
-  - ipykernel=6.29.2=pyha63f2e9_0
-  - ipython=8.21.0=pyh7428d3b_0
-  - jedi=0.19.1=pyhd8ed1ab_0
-  - jupyter_client=8.6.0=pyhd8ed1ab_0
-  - jupyter_core=5.7.1=py311h1ea47a8_0
+  - charset-normalizer=2.0.4=pyhd3eb1b0_0
+  - click=8.1.7=py311haa95532_0
+  - cloudpathlib=0.16.0=py311haa95532_1
+  - colorama=0.4.6=py311haa95532_0
+  - comm=0.1.2=py311haa95532_0
+  - confection=0.1.4=py311h746a85d_0
+  - cymem=2.0.6=py311hd77b12b_0
+  - cython-blis=0.7.9=py311hd7041d2_0
+  - debugpy=1.6.7=py311hd77b12b_0
+  - decorator=5.1.1=pyhd3eb1b0_0
+  - executing=0.8.3=pyhd3eb1b0_0
+  - expat=2.5.0=hd77b12b_0
+  - idna=3.4=py311haa95532_0
+  - intel-openmp=2023.1.0=h59b6b97_46320
+  - ipykernel=6.28.0=py311haa95532_0
+  - ipython=8.20.0=py311haa95532_0
+  - ipywidgets=8.0.4=py311haa95532_0
+  - jedi=0.18.1=py311haa95532_1
+  - jinja2=3.1.3=py311haa95532_0
+  - jupyter_client=8.6.0=py311haa95532_0
+  - jupyter_core=5.5.0=py311haa95532_0
+  - jupyterlab_widgets=3.0.9=py311haa95532_0
+  - langcodes=3.3.0=pyhd3eb1b0_0
   - libffi=3.4.4=hd77b12b_0
-  - libsodium=1.0.18=h8d14728_1
-  - matplotlib-inline=0.1.6=pyhd8ed1ab_0
-  - nameparser=1.0.5=py_0
-  - nest-asyncio=1.6.0=pyhd8ed1ab_0
-  - openssl=3.2.1=hcfcfb64_0
-  - packaging=23.2=pyhd8ed1ab_0
-  - parso=0.8.3=pyhd8ed1ab_0
-  - pickleshare=0.7.5=py_1003
+  - libsodium=1.0.18=h62dcd97_0
+  - markdown-it-py=2.2.0=py311haa95532_1
+  - markupsafe=2.1.3=py311h2bbff1b_0
+  - matplotlib-inline=0.1.6=py311haa95532_0
+  - mdurl=0.1.0=py311haa95532_0
+  - mkl=2023.1.0=h6b88ed4_46358
+  - mkl-service=2.4.0=py311h2bbff1b_1
+  - mkl_fft=1.3.8=py311h2bbff1b_0
+  - mkl_random=1.2.4=py311h59b6b97_0
+  - murmurhash=1.0.7=py311hd77b12b_0
+  - nest-asyncio=1.5.6=py311haa95532_0
+  - numexpr=2.8.7=py311h1fcbade_0
+  - numpy=1.26.3=py311hdab7c0b_0
+  - numpy-base=1.26.3=py311hd01c5d8_0
+  - openssl=3.0.13=h2bbff1b_0
+  - packaging=23.1=py311haa95532_0
+  - pandas=2.1.4=py311hf62ec03_0
+  - parso=0.8.3=pyhd3eb1b0_0
   - pip=23.3.1=py311haa95532_0
-  - platformdirs=4.2.0=pyhd8ed1ab_0
-  - prompt-toolkit=3.0.42=pyha770c72_0
-  - psutil=5.9.8=py311ha68e1ae_0
-  - pure_eval=0.2.2=pyhd8ed1ab_0
-  - pygments=2.17.2=pyhd8ed1ab_0
+  - platformdirs=3.10.0=py311haa95532_0
+  - preshed=3.0.6=py311h6c2663c_0
+  - prompt-toolkit=3.0.43=py311haa95532_0
+  - prompt_toolkit=3.0.43=hd3eb1b0_0
+  - psutil=5.9.0=py311h2bbff1b_0
+  - pure_eval=0.2.2=pyhd3eb1b0_0
+  - pydantic=1.10.12=py311h2bbff1b_1
+  - pygments=2.15.1=py311haa95532_1
+  - pysocks=1.7.1=py311haa95532_0
   - python=3.11.7=he1021f5_0
-  - python-dateutil=2.8.2=pyhd8ed1ab_0
-  - python_abi=3.11=2_cp311
-  - pywin32=306=py311h12c1d0e_2
-  - pyzmq=25.1.2=py311h9250fbb_0
+  - python-dateutil=2.8.2=pyhd3eb1b0_0
+  - python-tzdata=2023.3=pyhd3eb1b0_0
+  - pytz=2023.3.post1=py311haa95532_0
+  - pywin32=305=py311h2bbff1b_0
+  - pyzmq=25.1.2=py311hd77b12b_0
+  - requests=2.31.0=py311haa95532_1
+  - rich=13.3.5=py311haa95532_0
   - setuptools=68.2.2=py311haa95532_0
-  - six=1.16.0=pyh6c4a22f_0
+  - shellingham=1.5.0=py311haa95532_0
+  - six=1.16.0=pyhd3eb1b0_1
+  - smart_open=5.2.1=py311haa95532_0
+  - spacy=3.7.2=py311ha84f9a1_0
+  - spacy-legacy=3.0.12=py311haa95532_0
+  - spacy-loggers=1.0.4=py311haa95532_0
   - sqlite=3.41.2=h2bbff1b_0
-  - stack_data=0.6.2=pyhd8ed1ab_0
+  - srsly=2.4.8=py311hd77b12b_1
+  - stack_data=0.2.0=pyhd3eb1b0_0
+  - tbb=2021.8.0=h59b6b97_0
+  - thinc=8.2.2=py311h30df693_0
   - tk=8.6.12=h2bbff1b_0
-  - tornado=6.3.3=py311ha68e1ae_1
-  - traitlets=5.14.1=pyhd8ed1ab_0
-  - typing_extensions=4.9.0=pyha770c72_0
-  - ucrt=10.0.22621.0=h57928b3_0
+  - tornado=6.3.3=py311h2bbff1b_0
+  - tqdm=4.65.0=py311h746a85d_0
+  - traitlets=5.7.1=py311haa95532_0
+  - typer=0.9.0=py311haa95532_0
+  - typing-extensions=4.9.0=py311haa95532_1
+  - typing_extensions=4.9.0=py311haa95532_1
+  - tzdata=2023d=h04d1e81_0
+  - urllib3=2.1.0=py311haa95532_1
   - vc=14.2=h21ff451_1
-  - vc14_runtime=14.38.33130=h82b7239_18
-  - vs2015_runtime=14.38.33130=hcb4865c_18
-  - wcwidth=0.2.13=pyhd8ed1ab_0
+  - vs2015_runtime=14.27.29016=h5e58377_2
+  - wasabi=0.9.1=py311haa95532_0
+  - wcwidth=0.2.5=pyhd3eb1b0_0
+  - weasel=0.3.4=py311haa95532_0
   - wheel=0.41.2=py311haa95532_0
+  - widgetsnbextension=4.0.5=py311haa95532_0
+  - win_inet_pton=1.1.0=py311haa95532_0
   - xz=5.4.5=h8cc25b3_0
-  - zeromq=4.3.5=h63175ca_0
-  - zipp=3.17.0=pyhd8ed1ab_0
+  - zeromq=4.3.5=hd77b12b_0
   - zlib=1.2.13=h8cc25b3_0
   - pip:
-      - annotated-types==0.6.0
-      - anyio==4.2.0
-      - argon2-cffi==23.1.0
-      - argon2-cffi-bindings==21.2.0
-      - arrow==1.3.0
-      - async-lru==2.0.4
-      - attrs==23.2.0
-      - babel==2.14.0
-      - beautifulsoup4==4.12.3
-      - bleach==6.1.0
-      - blis==0.7.11
-      - catalogue==2.0.10
-      - cffi==1.16.0
-      - charset-normalizer==3.3.2
-      - click==8.1.7
-      - cloudpathlib==0.16.0
-      - confection==0.1.4
-      - cymem==2.0.8
-      - defusedxml==0.7.1
-      - fastjsonschema==2.19.1
-      - fqdn==1.5.1
-      - idna==3.6
-      - ipywidgets==8.1.2
-      - isoduration==20.11.0
-      - jinja2==3.1.3
-      - json5==0.9.14
-      - jsonpointer==2.4
-      - jsonschema==4.21.1
-      - jsonschema-specifications==2023.12.1
-      - jupyter==1.0.0
-      - jupyter-console==6.6.3
-      - jupyter-events==0.9.0
-      - jupyter-lsp==2.2.2
-      - jupyter-server==2.12.5
-      - jupyter-server-terminals==0.5.2
-      - jupyterlab==4.0.12
-      - jupyterlab-pygments==0.3.0
-      - jupyterlab-server==2.25.2
-      - jupyterlab-widgets==3.0.10
-      - langcodes==3.3.0
-      - markupsafe==2.1.5
-      - mistune==3.0.2
-      - murmurhash==1.0.10
-      - nbclient==0.9.0
-      - nbconvert==7.16.0
-      - nbformat==5.9.2
-      - notebook==7.0.8
-      - notebook-shim==0.2.3
-      - numpy==1.26.4
-      - overrides==7.7.0
-      - pandas==2.2.0
-      - pandocfilters==1.5.1
-      - preshed==3.0.9
-      - prometheus-client==0.19.0
-      - pycparser==2.21
-      - pydantic==2.6.1
-      - pydantic-core==2.16.2
-      - python-json-logger==2.0.7
-      - pytz==2024.1
-      - pywinpty==2.0.12
-      - pyyaml==6.0.1
-      - qtconsole==5.5.1
-      - qtpy==2.4.1
-      - referencing==0.33.0
-      - requests==2.31.0
-      - rfc3339-validator==0.1.4
-      - rfc3986-validator==0.1.1
-      - rpds-py==0.17.1
-      - send2trash==1.8.2
-      - smart-open==6.4.0
-      - sniffio==1.3.0
-      - soupsieve==2.5
-      - spacy==3.7.2
-      - spacy-legacy==3.0.12
-      - spacy-loggers==1.0.5
-      - srsly==2.4.8
-      - terminado==0.18.0
-      - thinc==8.2.3
-      - tinycss2==1.2.1
-      - tqdm==4.66.2
-      - typer==0.9.0
-      - types-python-dateutil==2.8.19.20240106
-      - tzdata==2024.1
-      - uri-template==1.3.0
-      - urllib3==2.2.0
-      - wasabi==1.1.2
-      - weasel==0.3.4
-      - webcolors==1.13
-      - webencodings==0.5.1
-      - websocket-client==1.7.0
-      - widgetsnbextension==4.0.10
+      - nameparser==1.1.3
       - xx-ent-wiki-sm==3.7.0
