--- a/enrich-phd-sup-data-conda-env.yaml
+++ b/enrich-phd-sup-data-conda-env.yaml
@@ -1,5 +1,6 @@
 name: enrich-phd-sup-data
 channels:
+  - conda-forge
   - defaults
 dependencies:
   - asttokens=2.0.5=pyhd3eb1b0_0
@@ -44,6 +45,7 @@ dependencies:
   - mkl_fft=1.3.8=py311h2bbff1b_0
   - mkl_random=1.2.4=py311h59b6b97_0
   - murmurhash=1.0.7=py311hd77b12b_0
+  - nameparser=1.0.5=py_0
   - nest-asyncio=1.5.6=py311haa95532_0
   - numexpr=2.8.7=py311h1fcbade_0
   - numpy=1.26.3=py311hdab7c0b_0
@@ -103,5 +105,4 @@ dependencies:
   - zeromq=4.3.5=hd77b12b_0
   - zlib=1.2.13=h8cc25b3_0
   - pip:
-      - nameparser==1.1.3
       - xx-ent-wiki-sm==3.7.0
