--- a/requirements.txt
+++ b/requirements.txt
@@ -1,152 +1,163 @@
-# requirements.txt
-
 annotated-types==0.7.0
-anyio==4.4.0
+anyio==4.8.0
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
 arrow==1.3.0
-asttokens==2.4.1
+asttokens==3.0.0
 async-lru==2.0.4
-attrs==24.2.0
-babel==2.16.0
-beautifulsoup4==4.12.3
-bleach==6.1.0
-blis==0.7.11
+attrs==25.3.0
+babel==2.17.0
+beautifulsoup4==4.13.3
+bleach==6.2.0
+blis==1.2.0
 catalogue==2.0.10
-certifi==2024.8.30
+cattrs==24.1.2
+certifi==2025.1.31
 cffi==1.17.1
-cfgv==3.4.0
-charset-normalizer==3.3.2
-click==8.1.7
-cloudpathlib==0.19.0
+charset-normalizer==3.4.1
+click==8.1.8
+cloudpathlib==0.21.0
 colorama==0.4.6
 comm==0.2.2
 confection==0.1.5
-contourpy==1.3.0
+contourpy==1.3.1
 cycler==0.12.1
-cymem==2.0.8
-Cython==3.0.11
-debugpy==1.8.5
-decorator==5.1.1
+cymem==2.0.11
+debugpy==1.8.13
+decorator==5.2.1
 defusedxml==0.7.1
-distlib==0.3.8
-executing==2.1.0
-fastjsonschema==2.20.0
-filelock==3.16.0
-fonttools==4.53.1
+docopt==0.6.2
+executing==2.2.0
+fastjsonschema==2.21.1
+filelock==3.18.0
+fonttools==4.56.0
 fqdn==1.5.1
+fsspec==2025.3.0
 h11==0.14.0
-httpcore==1.0.5
-httpx==0.27.2
-identify==2.6.1
-idna==3.8
+httpcore==1.0.7
+httpx==0.28.1
+huggingface-hub==0.29.3
+idna==3.10
+IProgress==0.4
 ipykernel==6.29.5
-ipython==8.27.0
+ipython==9.0.2
+ipython_pygments_lexers==1.1.1
 ipywidgets==8.1.5
 isoduration==20.11.0
-jedi==0.19.1
-Jinja2==3.1.4
-json5==0.9.25
+jedi==0.19.2
+Jinja2==3.1.6
+joblib==1.4.2
+json5==0.10.0
 jsonpointer==3.0.0
 jsonschema==4.23.0
-jsonschema-specifications==2023.12.1
+jsonschema-specifications==2024.10.1
 jupyter==1.1.1
 jupyter-console==6.6.3
-jupyter-events==0.10.0
+jupyter-events==0.12.0
 jupyter-lsp==2.2.5
-jupyter_client==8.6.2
+jupyter_client==8.6.3
 jupyter_core==5.7.2
-jupyter_server==2.14.2
+jupyter_server==2.15.0
 jupyter_server_terminals==0.5.3
-jupyterlab==4.2.5
+jupyterlab==4.3.6
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.3
 jupyterlab_widgets==3.0.13
-kiwisolver==1.4.7
-langcodes==3.4.0
-language_data==1.2.0
-marisa-trie==1.2.0
+kiwisolver==1.4.8
+langcodes==3.5.0
+language_data==1.3.0
+marisa-trie==1.2.1
 markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-matplotlib==3.9.2
+MarkupSafe==3.0.2
+matplotlib==3.10.1
 matplotlib-inline==0.1.7
 mdurl==0.1.2
-mistune==3.0.2
-murmurhash==1.0.10
+mistune==3.1.2
+mpmath==1.3.0
+murmurhash==1.0.12
 nameparser==1.1.3
-nbclient==0.10.0
-nbconvert==7.16.4
+nbclient==0.10.2
+nbconvert==7.16.6
 nbformat==5.10.4
-nbstripout==0.7.1
 nest-asyncio==1.6.0
-nodeenv==1.9.1
-notebook==7.2.2
+networkx==3.4.2
+notebook==7.3.2
 notebook_shim==0.2.4
-numpy==1.26.4
+num2words==0.5.14
+numpy==2.2.3
 overrides==7.7.0
-packaging==24.1
-pandas==2.2.2
+packaging==24.2
+pandas==2.2.3
 pandocfilters==1.5.1
 parso==0.8.4
-pillow==10.4.0
-platformdirs==4.3.2
-pre-commit==3.8.0
+pillow==11.1.0
+platformdirs==4.3.6
 preshed==3.0.9
-prometheus_client==0.20.0
-prompt_toolkit==3.0.47
-psutil==6.0.0
+prometheus_client==0.21.1
+prompt_toolkit==3.0.50
+psutil==7.0.0
 pure_eval==0.2.3
-pyalex==0.15.1
-pybliometrics==4.1
+pyalex==0.18
+pybliometrics==4.2
 pycparser==2.22
-pydantic==2.9.1
-pydantic_core==2.23.3
-Pygments==2.18.0
-pyparsing==3.1.4
+pydantic==2.10.6
+pydantic_core==2.27.2
+Pygments==2.19.1
+pyparsing==3.2.1
 python-dateutil==2.9.0.post0
-python-json-logger==2.0.7
-pytz==2024.2
-pywin32==306
-pywinpty==2.0.13
+python-json-logger==3.3.0
+pytz==2025.1
+pywin32==309
+pywinpty==2.0.15
 PyYAML==6.0.2
-pyzmq==26.2.0
-referencing==0.35.1
+pyzmq==26.3.0
+referencing==0.36.2
+regex==2024.11.6
 requests==2.32.3
+requests-cache==1.2.1
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
-rich==13.8.1
-rpds-py==0.20.0
+rich==13.9.4
+rpds-py==0.23.1
+safetensors==0.5.3
+scikit-learn==1.6.1
+scipy==1.15.2
 Send2Trash==1.8.3
-setuptools==74.1.2
+sentence-transformers==3.4.1
+setuptools==76.0.0
 shellingham==1.5.4
-six==1.16.0
-smart-open==7.0.4
+six==1.17.0
+smart-open==7.1.0
 sniffio==1.3.1
 soupsieve==2.6
-spacy==3.7.6
+spacy==3.8.4
 spacy-legacy==3.0.12
 spacy-loggers==1.0.5
-srsly==2.4.8
+srsly==2.5.1
 stack-data==0.6.3
+sympy==1.13.1
 terminado==0.18.1
-thinc==8.2.5
-tinycss2==1.3.0
-tornado==6.4.1
-tqdm==4.66.5
+thinc==8.3.4
+threadpoolctl==3.6.0
+tinycss2==1.4.0
+tokenizers==0.21.1
+torch==2.6.0
+tornado==6.4.2
+tqdm==4.67.1
 traitlets==5.14.3
-typer==0.12.5
-types-python-dateutil==2.9.0.20240906
+transformers==4.49.0
+typer==0.15.2
+types-python-dateutil==2.9.0.20241206
 typing_extensions==4.12.2
-tzdata==2024.1
+tzdata==2025.1
 uri-template==1.3.0
-urllib3==2.2.3
-virtualenv==20.26.4
+url-normalize==1.4.3
+urllib3==2.3.0
 wasabi==1.1.3
 wcwidth==0.2.13
 weasel==0.4.1
-webcolors==24.8.0
+webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.8.0
 widgetsnbextension==4.0.13
-wrapt==1.16.0
-xx-ent-wiki-sm @ https://github.com/explosion/spacy-models/releases/download/xx_ent_wiki_sm-3.7.0/xx_ent_wiki_sm-3.7.0-py3-none-any.whl#sha256=66c227a793f8a79814d6ca1da7c0ae633172e2fb0a94737bc8bd2e517479e73c
+wrapt==1.17.2
