Ignore dimensions api key

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 # config and settings
 dataset_config.yaml
 contact_email.txt
+dimensions_api_key.txt
 scoupus_api_key.csv
 
 # VS Code & dev files
